tests/transpiler/x/swift/map_nested_assign.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:35 GMT+7
var data = ["outer": ["inner": 1]]
data["outer"]["inner"] = 2
print((data["outer"]!["inner"]! as! Int))
